database.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: database-deployment
  labels:
    app: database
spec:
  replicas: 1
  selector:
    matchLabels:
      app: database-pod
  template:
    metadata:
      labels:
        app: database-pod
    spec:
      containers:
      - name: sql-container
        image: salim917/k8s:database_salim_image
        ports:
        - containerPort: 1433
        volumeMounts:
            - mountPath: /var/opt/mssql/lib/
              name: database-volume
      volumes:
        - name: database-volume
          persistentVolumeClaim:
            claimName: mysql-volume-claim
      
      
        
---
apiVersion: v1
kind: Service
metadata:
  name: service-database
spec:
  selector:
    app: database-pod
  ports:
    - protocol: TCP
      port: 1433
      targetPort: 1433
  type: ClusterIP
