user-data.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-data-deployment
  labels:
    app: user-data
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-data-pod
  template:
    metadata:
      labels:
        app: user-data-pod
    spec:
      containers:
      - name: user-data
        image: redis:latest
        ports:
        - containerPort: 6379
        resources:
          requests:
            memory: "100Mi"
            cpu: "4m"
          
---
apiVersion: v1
kind: Service
metadata:
  name: service-user-data
spec:
  selector:
    app: user-data-pod
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
  type: ClusterIP
